update dashboard metrics