@@ -3,6 +3,7 @@ package sg.edu.nus.iss.AD_Locum_Doctors.controllers;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -37,32 +38,66 @@ public class DashboardController {
 	AverageDailyRateService averageDailyRateService;
 
 	static int count = 0;
+	static List<JobPost> jobPostList;
 
 	@GetMapping("/clinic")
 	public String dashboard(Model model, HttpSession session) {
 		User user = (User) session.getAttribute("user");
 		Organization org = user.getOrganization();
-		List<JobPost> jobPosts = jobPostService.findAll().stream()
-				.filter(x -> x.getClinicUser().getOrganization().getId() == org.getId()).toList();
+		List<JobPost> jobPosts = new ArrayList<>();
+		jobPosts = jobPostService.findAll().stream()
+				.filter(x -> x.getClinicUser().getOrganization().getId() == org.getId()).collect(Collectors.toList());
+
+		// Unfilled Jobs
+		List<JobPost> openJobs = new ArrayList<>();
+		openJobs = jobPosts.stream().filter(x -> x.getStatus().equals(JobStatus.OPEN))
+				.collect(Collectors.toList());
+		model.addAttribute("unfilledJobs", openJobs.size());
+
+		// Upcoming Job Bookings
+		List<JobPost> upcomingJobs = new ArrayList<>();
+		upcomingJobs = jobPosts.stream().filter(x -> x.getStatus().equals(JobStatus.ACCEPTED))
+				.collect(Collectors.toList());
+		model.addAttribute("upcomingJobs", upcomingJobs.size());
+
+		// Cancellation Rate
+		List<JobPost> cancelledJobs = new ArrayList<>();
+		cancelledJobs = jobPosts.stream().filter(x -> x.getStatus().equals(JobStatus.CANCELLED))
+				.collect(Collectors.toList());
+		List<JobPost> jobsNotOpenOrRemoved = new ArrayList<>();
+		jobsNotOpenOrRemoved = jobPosts.stream().filter(x -> !x.getStatus().equals(JobStatus.OPEN))
+				.filter(x -> !x.getStatus().equals(JobStatus.REMOVED)).collect(Collectors.toList());
+		Double cancellationRate = 0.0;
+		if (cancelledJobs.size() != 0) {
+			cancellationRate = (double) Math.round((cancelledJobs.size() * 100 * 10 / jobsNotOpenOrRemoved.size()))
+					/ 10;
+		}
+		model.addAttribute("cancellationRate", cancellationRate);
+
+		// TODO: Average Job Take Up Speed
+		
+		model.addAttribute("averageTakeUpSpeed", "");
+
 		// Job Postings Status
+		jobPostList = new ArrayList<JobPost>(jobPosts);
 		List<Integer> jobPostCountByStatus = new ArrayList<>();
 		List<JobStatus> jobStatusList = Stream.of(JobStatus.values()).filter(s -> !s.equals(JobStatus.DELETED))
 				.toList();
 		jobStatusList.forEach(s -> {
 			count = 0;
-			jobPosts.forEach(j -> {
+			jobPostList.forEach(j -> {
 				if (j.getStatus() == s) {
 					count++;
 				}
 			});
-			if (count != 0) {
-				jobPostCountByStatus.add(count);
-			}
+			jobPostCountByStatus.add(count);
 		});
 		model.addAttribute("jobStatusList", jobStatusList);
 		model.addAttribute("jobStatusData", jobPostCountByStatus);
+
 		// Time Series Chart
-		List<AverageDailyRate> adrList = averageDailyRateService.getAverageDailyRates().stream()
+		List<AverageDailyRate> adrList = new ArrayList<>();
+		adrList = averageDailyRateService.getAverageDailyRates().stream()
 				.sorted(Comparator.comparing(AverageDailyRate::getDate)).collect(Collectors.toList());
 		List<LocalDate> dates = new ArrayList<>();
 		List<Double> weekday_14MA = new ArrayList<>(), weekday_28MA = new ArrayList<>(),
@@ -87,10 +122,13 @@ public class DashboardController {
 		model.addAttribute("weekday_28MA", weekday_28MA);
 		model.addAttribute("weekend_14MA", weekend_14MA);
 		model.addAttribute("weekend_28MA", weekend_28MA);
+
 		// Latest Job Posts
 		model.addAttribute("latestJobPosts", jobPosts.stream().limit(8).toList());
+
 		// User Recent Activities
-		Map<LocalDate, List<JobAdditionalRemarks>> dateTimeToRemarks = remarksService.findAll().stream()
+		Map<LocalDate, List<JobAdditionalRemarks>> dateTimeToRemarks = new HashMap<>();
+		dateTimeToRemarks = remarksService.findAll().stream()
 				.filter(x -> x.getJobPost().getClinicUser().getId() == user.getId())
 				.sorted(Comparator.comparing(JobAdditionalRemarks::getDateTime).reversed()).limit(10)
 				.collect(Collectors.groupingBy(JobAdditionalRemarks::getDateOnly));
